Frame title height fixed to avoid jumpy height

--- a/css/app.css
+++ b/css/app.css
@@ -217,6 +217,7 @@ header {
   text-align: center;
   color: lightskyblue;
   text-transform: capitalize;
+  height: 30px;
 }
 
 #clouds{
